--- a/index.html
+++ b/index.html
@@ -195,7 +195,8 @@
 
         <!-- Start extra section  -->
         <div class="container">
-        <h2>My Completed Projects</h2>
+
+        <div class="project-title"><h2>My Completed Projects</h2></div>
         <div class="complete-projects">
             <div class="projectimg1">
 
