--- a/index.html
+++ b/index.html
@@ -66,17 +66,17 @@
                 <div class="feature-img1">
                     <img src="images/team1.png" alt="">
 
-                <div class="div feature-img11">
-                    <img src="images/team2.png" alt="">
+                    <div class="div feature-img11">
+                        <img src="images/team2.png" alt="">
                     </div>
                 </div>
 
                 <div class="feature-img2">
                     <img src="images/team3.png" alt="">
-                    
-                <div class="div feature-img22">
-                    <img src="images/team4.png" alt="">
-                </div>
+
+                    <div class="div feature-img22">
+                        <img src="images/team4.png" alt="">
+                    </div>
                 </div>
             </div>
 
@@ -196,29 +196,31 @@
         <!-- Start extra section  -->
         <div class="container">
 
-        <div class="project-title"><h2>My Completed Projects</h2></div>
-        <div class="complete-projects">
-            <div class="projectimg1">
-
-                <div class="projectimg"><img src="images/projectimg4.jpg" alt=""></div>
-                <p>There is a project show of our architects. See the more information to hire us.</p>
-                <button class="project-btn-color">Learn More</button>
+            <div class="project-title">
+                <h2>My Completed Projects</h2>
             </div>
+            <div class="complete-projects">
+                <div class="projectimg1">
 
-            <div class="projectimg1">
-                <div class="projectimg"><img src="images/projectimg2.jpg" alt=""></div>
-                <p>There is a project show of our architects. See the more information to hire us.</p>
-                <button class="project-btn-color">Learn More</button>
+                    <div class="projectimg"><img src="images/projectimg4.jpg" alt=""></div>
+                    <p>There is a project show of our architects. See the more information to hire us.</p>
+                    <button class="project-btn-color">Learn More</button>
+                </div>
+
+                <div class="projectimg1">
+                    <div class="projectimg"><img src="images/projectimg2.jpg" alt=""></div>
+                    <p>There is a project show of our architects. See the more information to hire us.</p>
+                    <button class="project-btn-color">Learn More</button>
+                </div>
+
+                <div class="projectimg1">
+                    <div class="projectimg"><img src="images/projectimg3.jpeg" alt=""></div>
+                    <p>There is a project show of our architects. See the more information to hire us.</p>
+                    <button class="project-btn-color">Learn More</button>
+                </div>
+
             </div>
-
-            <div class="projectimg1">
-                <div class="projectimg"><img src="images/projectimg3.jpeg" alt=""></div>
-                <p>There is a project show of our architects. See the more information to hire us.</p>
-                <button class="project-btn-color">Learn More</button>
-            </div>
-
         </div>
-    </div>
 
 
 
